# etf-assistant

./:  README.md  .gitignore  Makefile  README.md  _config.yml  pyproject.toml  sample_env
.streamlit/: config.toml
app/backend/: config.py  utils.py
app/backend/chains/: __init__.py  answer_generation.py  query_filter.py  query_generation.py
app/backend/chains/docqa/: __init__.py  captions.py  rag_chain.py  source_filter.py  summarize_table.py
app/backend/chats/: docqa.py  search.py
app/backend/prompts/: etf.py
app/backend/retrievers/: __init__.py  chroma.py  correction_catalog.py  multi_modal.py
app/backend/splitters/: __init__.py  base.py  multi_modal.py  page_split.py  page_split_multi_modal.py
app/web/: Home.py  config.py  utils.py
app/web/pages/: 1_ETF Screener.py  1_Search.py  2_Details.py  2_ETF Analytics.py  3_Admin.py
app/web/storage/: bucket.py  docs_db.py  docs_storage.py
app/web/ui/: __init__.py  chart.py  documents.py  etf_overview.py  etfs_table.py  searchbar.py
assets/css/: style.scss
