[tool.poetry]
name = "etf-assistant"
version = "0.1.0"
description = ""
authors = ["Simone Eandi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
chromadb = "^0.4.22"
langchain = "^0.2.1"
python-dotenv = "^1.0.1"
openai = "^1.11.0"
langfuse = "^2.9.0"
loguru = "^0.7.2"
langchain-openai = "^0.1.7"
pdfplumber = "^0.10.4"
unstructured = {extras = ["all-docs"], version = "^0.12.4"}
pymupdf = "^1.23.25"
minio = "^7.2.5"
streamlit = "^1.32.2"
streamlit-echarts = "^0.4.0"
justetf-scraping = {git = "https://github.com/druzsan/justetf-scraping.git"}
langchain-community = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
